--- a/notebook/notebook.Rnw
+++ b/notebook/notebook.Rnw
@@ -30,25 +30,37 @@ community network structure and stability}
 \begin{itemize}
 \end{itemize}
 
-\section{20 Feb 2014}
-
-Modularity results:
+\section{21 Feb 2014}
+Results form hoth
 
 <<>>=
-library(bipartite)
-source('../src/pbr_load_data.R')
-m <- sign(pbr.09$c)[,apply(pbr.09$c,2,sum)!=0]
-                                        #mod.obs <- slot(computeModules(m),'likelihood')
-mod.obs <- 0.220599
-mod.null <- readLines('../results/bitmodout.txt')
-mod.null <- unlist(strsplit(mod.null,split=' '))
-mod.null <- as.numeric(mod.null)
-z <- (mod.obs-mean(mod.null))/sd(mod.null)
-hist(mod.null)
-abline(v=mod.obs)
+x <- dget('~/Desktop/pbr_modularity.R')x
+
 
 @ 
 
+\section{20 Feb 2014}
+
+Re-running modularity on Hoth with a burnin.
+
+<<>>=
+source('../src/pbr_load_data.R')
+library(bipartite)
+m <- pbr.09$c
+m <- m[,apply(m,2,sum)!=0]
+                                        #mod.obs <- slot(computeModules(m),'likelihood')
+mod.obs <- 0.211924
+mod.null <- readLines('~/Desktop/bitmodout.txt')
+mod.null <- strsplit(mod.null,split=' ')
+mod.null <- as.numeric(unlist(mod.null))
+z <- (mod.obs-mean(mod.null))/sd(mod.null)
+p <- c(lower.p=length(mod.null[mod.null<=mod.obs]),upper.p=length(mod.null[mod.null>=mod.obs]))/length(mod.null)
+out <- list(null=mod.null,results=c(obs=mod.obs,z=z,p))
+hist(mod.null,xlim=c(min(mod.null)-0.075,max(mod.null)+0.075))
+abline(v=mod.obs)
+
+
+@ 
 
 \section{18 Feb 2014}
 - look at modularity (pbr_modularity.R now running on Romer)
