--- a/notebook/notebook.Rnw
+++ b/notebook/notebook.Rnw
@@ -30,6 +30,140 @@ community network structure and stability}
 \begin{itemize}
 \end{itemize}
 
+\section{7 Mar 2014}
+
+<<>>=
+source('../src/pbr_load_data.R')
+library(ComGenR)
+matchNets <- function(x,y){
+  nx <- rownames(x) #names in x
+  ny <- rownames(y) #names in y
+  mny <- nx[nx%in%ny==FALSE] #x missing from y
+  mnx <- ny[ny%in%nx==FALSE] #y missing from x
+  nxy <- nx[nx%in%ny] #x matching y
+                                        #matching x
+  x. <- cbind(x,matrix(0,nrow=nrow(x),ncol=length(mnx)))
+  x. <- rbind(x.,matrix(0,nrow=length(mnx),ncol=ncol(x.)))
+                                        #matching y
+  y. <- cbind(y,matrix(0,nrow=nrow(y),ncol=length(mny)))
+  y. <- rbind(y.,matrix(0,nrow=length(mny),ncol=ncol(y.)))
+                                        #
+  if (all(dim(x.)==dim(y.))){return(list(x.,y.))}else{warning('Unknown error.')}
+}
+                                        #2008
+con08 <- lapply(pbr.08,CoNetwork)
+bin08 <- lapply(pbr.08,as.matrix)
+for (i in 1:length(bin08)){bin08[[i]][bin08[[i]]!=0] <- 1}
+n08 <- lapply(bin08,function(x) t(x)%*%x)
+n08. <- lapply(bin08,function(x) t(x)%*%x)
+length(n08[[1]][n08[[1]]!=n08.[[1]]]);length(n08[[2]][n08[[2]]!=n08.[[2]]])
+for (i in 1:length(n08)){n08[[i]][con08[[i]]==0] <- 0}
+length(n08[[1]][n08[[1]]!=n08.[[1]]]);length(n08[[2]][n08[[2]]!=n08.[[2]]])
+
+pbn08 <- lapply(n08.,function(x) x[x[,1]!=0,x[,1]!=0])
+for (i in 1:length(pbn08)){pbn08[[i]][2:nrow(pbn08[[i]]),2:ncol(pbn08[[i]])] <- 0}
+                                        #Frequency of occurrence/co-occurrences
+op <- par(mar = c(10,4,4,2) + 0.1)
+mp <- barplot(sort(pbn08[[1]][1,],decreasing=TRUE),las=2,xaxt='none',ylab='Frequency')
+axis(1,at=mp,labels=names(sort(pbn08[[1]][1,],decreasing=TRUE)),las=2,cex.axis=0.5)
+mp <- barplot(sort(pbn08[[2]][1,],decreasing=TRUE),las=2,xaxt='none',ylab='Frequency')
+axis(1,at=mp,labels=names(sort(pbn08[[2]][1,],decreasing=TRUE)),las=2,cex.axis=0.5)
+par(op)
+                                        #CoNetwork for just those species with PB co-occurrences
+n08.. <- n08
+for (i in 1:length(n08..)){n08..[[i]] <- n08..[[i]][colnames(n08[[i]])%in%colnames(pbn08[[i]]),colnames(n08[[i]])%in%colnames(pbn08[[i]])]}
+n08.. <- matchNets(n08..[[1]],n08..[[2]])
+names(n08..) <- names(n08)
+par(mfrow=c(1,2))
+coord <- mgp(n08..[[1]],com=pbr.08[[1]],displaylabels=TRUE)
+mgp(n08..[[2]],com=pbr.08[[2]],displaylabels=TRUE,my.coord=coord)
+gplot(n08..[[1]],gmode='graph',mode='circle')
+gplot(n08..[[2]],gmode='graph',mode='circle')
+                                        #2009
+con09 <- lapply(pbr.09,CoNetwork)
+bin09 <- lapply(pbr.09,as.matrix)
+for (i in 1:length(bin09)){bin09[[i]][bin09[[i]]!=0] <- 1}
+n09 <- lapply(bin09,function(x) t(x)%*%x)
+n09. <- lapply(bin09,function(x) t(x)%*%x)
+length(n09[[1]][n09[[1]]!=n09.[[1]]]);length(n09[[2]][n09[[2]]!=n09.[[2]]])
+for (i in 1:length(n09)){n09[[i]][con09[[i]]==0] <- 0}
+length(n09[[1]][n09[[1]]!=n09.[[1]]]);length(n09[[2]][n09[[2]]!=n09.[[2]]])
+
+pbn09 <- lapply(n09.,function(x) x[x[,1]!=0,x[,1]!=0])
+for (i in 1:length(pbn09)){pbn09[[i]][2:nrow(pbn09[[i]]),2:ncol(pbn09[[i]])] <- 0}
+                                        #Frequency of occurrence/co-occurrences
+op <- par(mar = c(10,4,4,2) + 0.1,mfrow=c(1,1))
+mp <- barplot(sort(pbn09[[1]][1,],decreasing=TRUE),las=2,xaxt='none',ylab='Frequency')
+axis(1,at=mp,labels=names(sort(pbn09[[1]][1,],decreasing=TRUE)),las=2,cex.axis=0.5)
+mp <- barplot(sort(pbn09[[2]][1,],decreasing=TRUE),las=2,xaxt='none',ylab='Frequency')
+axis(1,at=mp,labels=names(sort(pbn09[[2]][1,],decreasing=TRUE)),las=2,cex.axis=0.5)
+par(op)
+                                        #CoNetwork for just those species with PB co-occurrences
+n09.. <- n09
+for (i in 1:length(n09..)){n09..[[i]] <- n09..[[i]][colnames(n09[[i]])%in%colnames(pbn09[[i]]),colnames(n09[[i]])%in%colnames(pbn09[[i]])]}
+n09.. <- matchNets(n09..[[1]],n09..[[2]])
+names(n09..) <- names(n09)
+par(mfrow=c(1,2))
+coord <- mgp(n09..[[1]],com=pbr.09[[1]],displaylabels=TRUE)
+mgp(n09..[[2]],com=pbr.09[[2]],displaylabels=TRUE,my.coord=coord)
+gplot(n09..[[1]],gmode='graph',mode='circle')
+gplot(n09..[[2]],gmode='graph',mode='circle')
+
+#2008+2009
+op <- par(mfrow=c(2,2),mai=c(0.6766,0.6806,0.6806,0.3486)-0.3)
+gplot(n08..[[1]],gmode='graph',mode='circle')
+gplot(n08..[[2]],gmode='graph',mode='circle')
+gplot(n09..[[1]],gmode='graph',mode='circle')
+gplot(n09..[[2]],gmode='graph',mode='circle')
+par(op)
+
+op <- par(mfrow=c(2,2),mai=c(0.6766,0.6806,0.6806,0.3486)-0.3)
+coord <- mgp(n08..[[2]],com=pbr.08[[2]],displaylabels=FALSE)
+mgp(n08..[[1]],com=pbr.08[[1]],displaylabels=FALSE,my.coord=coord)
+coord <- mgp(n09..[[2]],com=pbr.09[[2]],displaylabels=FALSE)
+mgp(n09..[[1]],com=pbr.09[[1]],displaylabels=FALSE,my.coord=coord)
+par(op)
+                                        #
+length(n08..[[1]][n08..[[1]]!=0]);length(n08..[[2]][n08..[[2]]!=0])
+length(n09..[[1]][n09..[[1]]!=0]);length(n09..[[2]][n09..[[2]]!=0])
+                                        #modularity
+detach(package:ComGenR);detach(package:igraph)
+mod08 <- lapply(n08..,function(x) computeModules(x[apply(x,1,sum)!=0,apply(x,2,sum)!=0],steps=100000))
+cen08 <- lapply(n08..,function(x) centralization(x[apply(x,1,sum)!=0,apply(x,2,sum)!=0],'degree'))
+mod09 <- lapply(n09..,function(x) computeModules(x[apply(x,1,sum)!=0,apply(x,2,sum)!=0],steps=100000))
+cen09 <- lapply(n09..,function(x) centralization(x[apply(x,1,sum)!=0,apply(x,2,sum)!=0],'degree'))
+library(ComGenR)
+                                        #
+mod08 <- c(c=0.389325,x=0.456388)
+cen08 <- c(c=0.2002138,x=0.2489177)
+mod09 <- c(c=0.454255,x=0.604196)
+cen09 <- c(c=0.1893781,x=0.1666667)
+                                        #qap
+net.dif <- function(dat,dat2=NULL,g1=NULL,g2=NULL){sum((dat[,,g1]-dat[,,g2])^2)}
+qin08 <- array(0,dim=c(nrow(n08..[[1]]),nrow(n08..[[1]]),2))
+qin08[,,1] <- n08..[[1]];qin08[,,2] <- n08..[[2]]
+q08 <- qaptest(qin08,net.dif,g1=1,g2=2)
+qin09 <- array(0,dim=c(nrow(n09..[[1]]),nrow(n09..[[1]]),2))
+qin09[,,1] <- n09..[[1]];qin09[,,2] <- n09..[[2]]
+q09 <- qaptest(qin09,net.dif,g1=1,g2=2)
+
+@ 
+
+\section{3 Mar 2014}
+
+\begin{enumerate}
+\item Conducted modularity analysis: P. betae tends to decrease
+  modularity, this could be an argument for P. betae's influence on
+  the community (i.e. it connects accross modules).
+\item Indicator species analysis showed:
+  \begin{enumerate}
+  \item Tip-roller, Anthocorid, BEB, midge, leaf tiers were all
+    indicators but in different years and only in exclusion
+  \item There were multiple species that indicate resistant (pb) and
+    susceptible (beb, mirid,see others) genotypes
+  \end{enumerate}
+\end{enumerate}
+
 \section{28 Feb 2014}
 Compare modularity and nestedness of control, removal, control (-pb)
 and removal (-pb) for 2008 and 2009
@@ -45,7 +179,17 @@ Aeolus. Setting up on Hoth.
 ##    "41.1853219095849"     "41.183996440613"    "39.0795911295416" 
 ##                method statistic.binmatnest2           alternative 
 ##                 "r00"    "12.0834221842896"           "two.sided" 
-
+n <- 104
+n08c <- as.numeric(as.character(read.csv('../results/nest08c.results')[n,]))
+n08x <- as.numeric(as.character(read.csv('../results/nest08x.results')[n,]))
+n08cnpb <- as.numeric(as.character(read.csv('../results/nest08cnpb.results')[n,]))
+n08xnpb <- as.numeric(as.character(read.csv('../results/nest08xnpb.results')[n,]))
+n09c <- as.numeric(as.character(read.csv('../results/nest09c.results')[n,]))
+n09x <- as.numeric(as.character(read.csv('../results/nest09x.results')[n,]))
+n09cnpb <- as.numeric(as.character(read.csv('../results/nest09cnpb.results')[n,]))
+n09xnpb <- as.numeric(as.character(read.csv('../results/nest09xnpb.results')[n,]))
+c(n08c,n08x,n08cnpb,n08xnpb)
+c(n09c,n09x,n09cnpb,n09xnpb)
 
 @ 
 
@@ -217,6 +361,8 @@ perm.08 <- lapply(pbr.08,function(x,g) adonis(x~g),g=factor(g08))
 perm.09 <- lapply(pbr.09,function(x,g) adonis(x~g),g=g09)
 perm.08np <- lapply(pbr.08,function(x,g) adonis(x[,-1]~g),g=g08) #no pemphigus
 perm.09np <- lapply(pbr.09,function(x,g) adonis(x[,-1]~g),g=g09) #no pemphigus
+perm.08rel <- lapply(pbr.08,function(x,g) adonis(apply(x,2,function(x) if(any(x!=0)){x/max(x)}else{x})~g),g=factor(g08))
+perm.09rel <- lapply(pbr.09,function(x,g) adonis(apply(x,2,function(x) if(any(x!=0)){x/max(x)}else{x})~g),g=factor(g09))
                                         #richness
 R.08 <- lapply(pbr.08,function(x) apply(x,1,function(x) sum(sign(x))))
 R.09 <- lapply(pbr.09,function(x) apply(x,1,function(x) sum(sign(x))))
@@ -230,6 +376,62 @@ summary(aov(R.08np[[1]]~factor(g08)))
 summary(aov(R.08np[[2]]~factor(g08)))
 summary(aov(R.09np[[1]]~factor(g09)))
 summary(aov(R.09np[[2]]~factor(g09)))
+
+###Indicator species analysis
+library(labdsv)
+isp.08 <- lapply(pbr.08,function(x,g) indval(x[,apply(x,2,sum)!=0],g),g=as.character(geno.08$c))
+isp.09 <- lapply(pbr.09,function(x,g) indval(x[,apply(x,2,sum)!=0],g),g=as.character(geno.09$c))
+lapply(isp.08,summary)
+lapply(isp.09,summary)
+#using resistance as an indicator
+r.08 <- as.character(geno.08$c)
+r.08[r.08==1008|r.08==1020] <- 1
+r.08[r.08!=1] <- 0
+r.09 <- as.character(geno.09$c)
+r.09[r.09==1008|r.09==1020] <- 1
+r.09[r.09!=1] <- 0
+ispr.08 <- lapply(pbr.08,function(x,r) indval(x[,apply(x,2,sum)!=0],r),r=r.08)
+ispr.09 <- lapply(pbr.09,function(x,r) indval(x[,apply(x,2,sum)!=0],r),r=r.09)
+lapply(ispr.08,summary)
+lapply(ispr.09,summary)
+#modules
+library(bipartite)
+#mod.08 <- lapply(pbr.08,function(x) computeModules(x[,apply(x,2,sum)!=0],steps=10000))
+#mod.09 <- lapply(pbr.09,function(x) computeModules(x[,apply(x,2,sum)!=0],steps=10000))
+lapply(mod.08,function(x) slot(x,'likelihood'))
+lapply(mod.09,function(x) slot(x,'likelihood'))
+mod.08npb <- lapply(pbr.08,function(x) computeModules(x[,apply(x,2,sum)!=0&colnames(x)!='pb'],steps=10000))
+mod.09npb <- lapply(pbr.09,function(x) computeModules(x[,apply(x,2,sum)!=0&colnames(x)!='pb'],steps=10000))
+unlist(lapply(mod.08,function(x) slot(x,'likelihood')))
+unlist(lapply(mod.08npb,function(x) slot(x,'likelihood')))
+unlist(lapply(mod.09,function(x) slot(x,'likelihood')))
+unlist(lapply(mod.09npb,function(x) slot(x,'likelihood')))
+
+
+###Conduct a modularity analysis only with those species that show a significant response to genotype (SRG)
+library(ComGenR)
+library(lme4)
+cgREML <- function(x,g,cv='covariate'){
+  if (any(cv=='covariate')){
+    x.lmer <- lmer(x~(1|g))
+    x.lm <- lm(x~1)
+    chi2 <- -2*logLik(x.lm, REML=T) +2*logLik(x.lmer, REML=T)
+    p.chi2 <- pchisq(chi2,df=1,lower.tail=FALSE)
+  }else{
+    x.lmer <- lmer(x~(1|g)+cv)
+    x.lm <- lm(x~1)
+    chi2 <- -2*logLik(x.lm, REML=T) +2*logLik(x.lmer, REML=T)
+    p.chi2 <- pchisq(chi2,df=1,lower.tail=FALSE)
+  }
+  return(c(chi2=chi2,P.value=p.chi2))
+}
+srg <- function(x,g){
+  test1 <- apply(x[,apply(x,2,sum)!=0],2,function(x,g) cgREML(x,g)[[2]],g=g)
+  test2 <- apply(x[,apply(x,2,sum)!=0],2,function(x,g) chisq.test(x,g)[[3]],g=g)
+  test3 <- apply(x[,apply(x,2,sum)!=0],2,function(x,g) unlist(summary(aov(x~g)))[9],g=g)
+}
+srg.08 <- lapply(
+
 
 @ 
 
